[APPDEV-3512] Fix text in sprite-divs being visible
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@26085 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/globalnav.css
+++ b/projects/Media/docroot/assets/css/common/globalnav.css
@@ -92,7 +92,7 @@
 div.spritediv {
   display: inline-block;
   overflow: hidden;
-  text-indent: -200%;
+  text-indent: -9999em;
   text-align: left;
 }
 
